# smtp-acs-bridge

./: .dockerignore  .gitignore  COPILOT_INSTRUCTIONS.md  Cargo.toml  Dockerfile  README.md
.github/: release-drafter.yml
.github/workflows/: docker.yml  release-drafter.yml
k8s/: acs-relay.yaml
src/: config.rs  error.rs  health.rs  lib.rs  main.rs  metrics.rs  relay.rs
tests/: acs_mailer_integration.rs  lettre_e2e.rs  send_test_email.rs  smtp_flow.rs
