[package]
name = "acs-smtp-relay"
version = "0.3.0"
edition = "2021"
authors = ["Rowan Jones <rowan@impermanent.io>"]
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.46.0", features = ["full"] }

# Error Handling & Logging
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP client for ACS REST API
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"

# Azure SDK for Email - handles authentication and API calls correctly
azure_core = "0.25.0"

# Email Parsing
mail-parser = "0.11.0"

# For async traits
async-trait = "0.1"
chrono = "0.4.41"
base64 = "0.22.1"
hmac = "0.12.1"
sha2 = "0.10.9"
url = "2.5.4"

[dev-dependencies]
# Mocking library for tests
mockall = "0.13.1"
