[package]
name = "acs-smtp-relay"
version = "1.0.0"
edition = "2021"
authors = ["Rowan Jones <rowan@impermanent.io>"]
license = "MIT"
description = "A simple, production-ready SMTP to Azure Communication Services (ACS) Email API relay."
repository = "https://github.com/ArrEssJay/smtp-acs-bridge"
readme = "README.md"
keywords = ["smtp", "azure", "acs", "relay", "email"]

[dependencies]
# Async runtime
tokio = { version = "1.38", features = ["full"] }

# Error Handling & Logging
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP client for ACS REST API
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Email Parsing
mail-parser = "0.11.0"

# For async traits
async-trait = "0.1"

# Crates for HMAC-SHA256 Authentication
chrono = "0.4"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
url = "2.5"

# Optional dependency for mocking
mockall = { version = "0.13", optional = true }

[dev-dependencies]
# Mocking HTTP servers for integration tests
wiremock = "0.6"

# This section enables the `mocks` feature when running the `smtp_flow` integration test.
[[test]]
name = "smtp_flow"
harness = true
required-features = ["mocks"]

[features]
# This feature flag enables the `automock` attribute in our library code.
mocks = ["dep:mockall"]
